--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
     set(DOXYGEN_EXTENSION_MAPPING no_extension=C++)
+    set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
     doxygen_add_docs(doxygen include/PiwcsPrwModel)
 endif()
 
