Begun work on IO: implemented basic read
- Added dependency minijson_reader as git submodule
- Partially implemented `Model::readModel(std::istream&)`
  - Limitation: section destinations not supported
  - Limitation: CROSSING nodes still not implemented
  - TODO: replace `const Identifier &` with `std::string_view`
    library-wide
  - Unit tests pending
- Improved HeaderFilterRegex in .clang-tidy to better ignore 3rd
  party headers
- Split `src/io.cpp` into `src/io_{read,write}.cpp`
- Updated & partially implemented `piwcsprwmodel-print`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,9 @@ add_library(piwcsprwmodel
     section.cpp
     util.cpp
     printing.cpp
-    io.cpp
+    io_read.cpp
+    io_write.cpp
 )
 
 target_include_directories(piwcsprwmodel PUBLIC ../include)
+target_include_directories(piwcsprwmodel PRIVATE ../lib)
