Added write-read unit tests; CROSSING nodes now read correctly
- Added `test/io_wr.cpp` with write-read cycle tests
- Fixed "unknown node type" errors when reaading CROSSING nodes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ if(GTest_FOUND)
         nodes.cpp
         section.cpp
         io_read.cpp
+        io_wr.cpp
     )
 
     target_link_libraries(tests piwcsprwmodel)
