Switched to ClausKlein's fork of minijson_writer

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = https://github.com/giacomodrago/minijson_reader.git
 [submodule "lib/minijson_writer"]
 	path = lib/minijson_writer
-	url = https://github.com/giacomodrago/minijson_writer.git
+	url = https://github.com/ClausKlein/minijson_writer.git
+	branch = master
