Fixed Doxygen generation and warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,8 @@ endif()
 # Setup doxygen if available
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
-    set(DOXYGEN_EXTENSION_MAPPING no_extension=C++)
     set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
-    doxygen_add_docs(doxygen include/PiwcsPrwModel)
+    doxygen_add_docs(doxygen include)
 endif()
 
 add_subdirectory(src)
