Added detailed overview documentation with examples
- `include/piwcsprwmodel.h` now contains a detailed explanation of
  the basic concepts in this library
- Added illustrations of examples in `docs/`
- Include graphs are no longer generated by doxygen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ endif()
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
     set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
+    set(DOXYGEN_INCLUDE_GRAPH NO)
+    set(DOXYGEN_IMAGE_PATH docs)
     doxygen_add_docs(doxygen include)
 endif()
 
