Add README and LICENSE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ if (DOXYGEN_FOUND)
     set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
     set(DOXYGEN_INCLUDE_GRAPH NO)
     set(DOXYGEN_IMAGE_PATH docs)
-    doxygen_add_docs(doxygen include)
+    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
+    doxygen_add_docs(doxygen include README.md)
 endif()
 
 add_subdirectory(src)
