Added `algorithms.h` and `isComplete`
- Added `isComplete(const Model &)`
- Added `Section::isConnected` to better localize the assumption
  that (m_start == ID_NULL) <=> (m_end == ID_NULL)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(piwcsprwmodel PRIVATE
     section.cpp
     metadata.cpp
     util.cpp
+    algorithms.cpp
     printing.cpp
     io_read.cpp
     io_write.cpp
