Added basic tests for `isCorrect`
- Added basic tests for `isCorrect(const Model&)`
- Added test sources to `tests` target

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ if(GTest_FOUND)
         io_read.cpp
         io_wr.cpp
         completeness.cpp
+		correctness.cpp
     )
 
     target_link_libraries(tests piwcsprwmodel)
