Changes proposed from https://github.com/OLEGSHA/PiwcsPrwModel/pull/1#discussion_r1577679369
- Rename `isLocCorrect(const Model& model, IdRef id)` to `isLocallyCorrect(const Model& model, IdRef id`
- Move `isLocallyCorrect` and `isCorrect` to correctness.cpp
- Introduce private header for purpose of linking test executable against `isLocallyCorrect`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(piwcsprwmodel PRIVATE
     metadata.cpp
     util.cpp
     algorithms.cpp
+    correctness.cpp
     printing.cpp
     io_read.cpp
     io_write.cpp
